# processing_rs

./: Cargo.toml  README.md
ffi-test/: .gitignore  CMakeLists.txt  bindings.h  main.c
main/: Cargo.toml
main/src/: main.rs
processing/: Cargo.toml  build.rs
processing/src/: core.rs  lib.rs  shader.rs  shader_manager.rs  shapes.rs  state.rs
processing/src/core/: color.rs  event.rs  mod.rs  shader.rs  state.rs  window.rs
processing/src/math/: constants.rs  mod.rs  util.rs
processing/src/shaders/: rect.wgsl  shader.wgsl  shader2.wgsl  triangle.wgsl
processing/src/shapes/: mod.rs  point.rs  rect.rs  triangle.rs
