[package]
name = "processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.1"
game-loop = {version = "1.0.0", features = ["winit"]}
hex_color = "3.0.0"
image = {version = "0.24.7", default-features = false, features = ["jpeg", "png"]}
lazy_static = "1.4.0"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = "0.28"

[build-dependencies]
cbindgen = "0.26.0"
